--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.24.1",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
